--- a/scripts/components/poi/tpls/attr-base/relationInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/relationInfoTpl.html
@@ -9,8 +9,8 @@
                             {{poi.parents[0].parentPoiPid}}
                         </label>
                         <div>
-                            <a href="javascript:void(0);" title="显示" ng-click="showPoiInMap(poi.parents[0].parentPoiPid)"><i class="glyphicon glyphicon-link"></i></a>
-                            <a href="javascript:void(0);" title="解除父" ng-click="deleteParent(poi)" style="padding-left:10px;"><i class="glyphicon glyphicon-trash"></i></a>
+                            <a href="javascript:void(0);" title="显示" ng-click="showPoiInMap(poi.parents[0].parentPoiPid)"><i class="glyphicon glyphicon-link" ng-show="!isSpecialOperation"></i></a>
+                            <a href="javascript:void(0);" title="解除父" ng-click="deleteParent(poi)" style="padding-left:10px;"><i class="glyphicon glyphicon-trash" ng-show="!isSpecialOperation"></i></a>
                         </div>
                     </li>
                     <li ng-if="poi.parents.length <= 0">
@@ -35,7 +35,7 @@
                             {{child.childPoiPid}}
                         </label>
                         <div>
-                            <a href="javascript:void(0);" ng-click="showPoiInMap(child.childPoiPid);"><i class="glyphicon glyphicon-link"></i></a>
+                            <a href="javascript:void(0);" ng-click="showPoiInMap(child.childPoiPid);"><i class="glyphicon glyphicon-link" ng-show="!isSpecialOperation"></i></a>
                         </div>
                     </li>
                 </ul>
