--- a/scripts/components/poi/tpls/attr-base/samePoisTpl.html
+++ b/scripts/components/poi/tpls/attr-base/samePoisTpl.html
@@ -5,7 +5,7 @@
                 <div>同一关系POI
                 <a ng-if="poi.samepoiParts.length > 0" class="glyphicon glyphicon-remove-sign"
                       style="padding-top:3px;float: right;color: darkgray;cursor:pointer;" title="删除同一关系"
-                      ng-click="deleteSamePoi(poi)"></a>
+                      ng-click="deleteSamePoi(poi)" ng-show="!isSpecialOperation"></a>
                 </div>
             </div>
             <div class="content">
