--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -40,7 +40,7 @@
         margin-left: 4px;
     }
     .both {
-        margin-top: 5px;
+        margin: 5px;
     }
     #sceneRoadTipsDiv {
         width: 100%;
@@ -465,6 +465,7 @@
                         <!--end 收费站-->
                         <!--begin 高速分歧-->
                         <div ng-if="dataTipsData.hasOwnProperty('o_array') && dataTipsData.isBranch" ng-repeat="branchItem in dataTipsData.o_array">
+                            <hr style="margin:0;">
                             <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
                                 <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
                                 <div class="col-sm-7 text-ellipsis" style="padding: 4px">
@@ -479,19 +480,19 @@
                                     <span class="label" ng-bind="branchItem.out.id" style="cursor:pointer;" ng-click="getFeatDataCallback(branchItem.out,'RDLINK')"></span>
                                 </div>
                             </div>
+                            <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                                <label class="col-sm-5 control-label" style="padding: 4px">出口编号:</label>
+                                <div class="col-sm-7" style="padding: 3px">
+                                    <span class="label" ng-bind="branchItem.exit" style="cursor:pointer;"></span>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('o_array') && dataTipsData.isBranch">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('o_array') && !dataTipsData.isBranch">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="item in dataTipsData.o_array[0].n_array" class="text-ellipsis">
                                     <span class="label" title="{{item}}">{{item}}</span>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="sceneExit">
-                            <label class="col-sm-5 control-label" style="padding: 4px">出口编号:</label>
-                            <div class="col-sm-7" style="padding: 3px" ng-repeat="item in sceneExit">
-                                <span class="label" ng-bind="item" style="cursor:pointer;"></span>
                             </div>
                         </div>
                         <!--end 高速分歧-->
