--- a/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
@@ -3,12 +3,12 @@
     <form name="ordinarySpeedForm">
     <!--<ul class="list-group list-group-lg m-b-none"  ng-if="oridiData.speedType===0" style="margin-bottom: 5px">-->
         <ul class="list-group list-group-lg m-b-none"  style="margin-bottom: 5px">
-        <li class="list-group-item">
-            <div class="list-name">
-                <a ng-click="changeSpeedAndDirect(roadlinkData.direct,oridiData.rowId)" style="cursor: pointer;color:#FFF;">修改方向</a>
-            </div>
-            <div class="list-line" style="margin-bottom: 5px;"></div>
-        </li>
+        <!--<li class="list-group-item">-->
+            <!--<div class="list-name">-->
+                <!--<a ng-click="changeSpeedAndDirect(roadlinkData.direct,oridiData.rowId)" style="cursor: pointer;color:#FFF;">修改方向</a>-->
+            <!--</div>-->
+            <!--<div class="list-line" style="margin-bottom: 5px;"></div>-->
+        <!--</li>-->
         <li class="list-group-item">
             <div><label class="control-label">限速类型</label></div>
             <div class="inline">
