--- a/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
@@ -7,9 +7,10 @@
     .trafficPic > img{
         text-align: center;
         cursor: pointer;
-        margin: 5px;
+        margin: 15px;
+        width: 30px;
+        height: 30px;
         transition: all 0.3s;
-        padding: 6px;
     }
     .trafficPic > .active{
         box-shadow: 0px 0px 7px 4px #9d9d9d;
@@ -48,18 +49,21 @@
         margin-top: 3px;
     }
 </style>
-<div ng-controller="addDirectOfConnexityController" id="addDirectOfConnexityDiv">
+<div ng-controller="addDirectOfConnexityController" id="addDirectOfConnexityDiv" oncontextmenu="self.event.returnValue=false">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label" style="color: #fff;font-size: 12px">增加车道</label></div>
             <div><label class="control-label" style="color: #fff;font-size: 10px">提示：选择图标后在地图上选择退出线</label></div>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item" style="padding:0px;">
             <div class="trafficPic">
                 <img  ng-repeat="item in laneDirectData"
                 ng-src="../../../images/road/1301/1301_0_{{item.flag}}.svg"
-                ng-click="selectLaneDir(item, $event)">
+                ng-mousedown="selectLaneDir(item, $event)">
             </div>
         </li>
     </ul>
+    <div style="padding: 5px 10px;text-align: right">
+        <button type="button" class="btn btn-main center-block" ng-click="addLane()">增 加</button>
+    </div>
 </div>
