--- a/scripts/components/road/tpls/attr_connexity_tpl/changeDirectTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/changeDirectTpl.html
@@ -7,9 +7,11 @@
     .trafficPic > img{
         text-align: center;
         cursor: pointer;
-        margin: 5px;
+        margin: 15px;
+        width: 30px;
+        height: 30px;
         transition: all 0.3s;
-        padding: 6px;
+        /*padding: 6px;*/
     }
     .trafficPic > .active{
         box-shadow: 0px 0px 7px 4px #9d9d9d;
@@ -53,7 +55,7 @@
         <li class="list-group-item">
             <div><label class="control-label" style="color:#fff">修改车信</label></div>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item" style="padding:0px;">
             <div class="trafficPic">
                 <img  ng-repeat="item in laneDirectData"
                 ng-src="../../../images/road/1301/1301_0_{{item.flag}}.svg"
