--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -37,7 +37,7 @@
                         ng-click="changeBusLaneDir(item, $index, $event)"
                         title="{{item.busDir.log}}">
                         <span class="glyphicon glyphicon-remove-sign remove"
-                        ng-click="deleteBusLane(item)"></span>
+                        ng-click="deleteBusLane(item, $index)"></span>
                     </div>
                 </div>
             </div>
