--- a/less/editor.less
+++ b/less/editor.less
@@ -839,6 +839,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   max-height: 190px;
   max-width: 220px;
   margin: auto;
+  height:140px;
 }
 .preview-btn() {
   position: absolute;
