--- a/scripts/components/poi/tpls/attr-tips/showImgModalTpl.html
+++ b/scripts/components/poi/tpls/attr-tips/showImgModalTpl.html
@@ -24,7 +24,7 @@
                 </button>
             </li>
         </ul>
-        <div id="originImgPanel">
+        <div>
             <img class="poiTipsOriginImg" img-show title="滑轮滚动可放大缩小" ng-src="{{imageNow.originUrl}}"/>
         </div>
         <div class="text-center">
