--- a/scripts/components/poi/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi/tpls/attr-tips/poiPopoverTips.html
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-remove-sign close-tips" ng-click="closeTips();"></span>
     <div class="col-sm-12 img-preview-container">
         <span ng-if="nowActiveImg.thumbnailUrl" class="glyphicon glyphicon-trash remove-preview-img" title="删除" ng-click="deletePhoto(nowActiveImg);"></span>
-        <img ng-if="nowActiveImg.thumbnailUrl" ng-click="showImage(nowActiveImg,nowActiveIndex);" image-404="../../../images/road/img/noimg.png" ng-src="{{nowActiveImg.thumbnailUrl}}" class="img-preview" alt="">
+        <img ng-if="nowActiveImg.thumbnailUrl" ng-click="showImage(nowActiveImg,nowActiveIndex);" image-404="../../../images/road/img/noimg.png" ng-src="{{nowActiveImg.originUrl}}" class="img-preview" alt="">
         <img ng-if="!nowActiveImg.thumbnailUrl" src="../../../images/road/img/noimg.png" class="img-preview" alt="当前无图片">
         <span class="photo-page">{{nowActiveIndex+1}}/{{poi.photos.length==0?1:poi.photos.length}}</span>
         <!--<div class="photo-load-bg" ng-show="showPhotoLoading">
