--- a/less/editor.less
+++ b/less/editor.less
@@ -2168,6 +2168,7 @@ input[type="range"]::-webkit-slider-thumb {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
+  display: inline-block;
   &.blue{
     background-color: #40A2D7;
     &:hover{
@@ -2188,6 +2189,7 @@ input[type="range"]::-webkit-slider-thumb {
     color: #ffffff;
     right: -2px;
     position: relative;
+    display: inline-block;
   }
   .remove-car-type{
     position: relative;
