--- a/scripts/components/road/tpls/layers_switch_tpl/filedsResultTpl.html
+++ b/scripts/components/road/tpls/layers_switch_tpl/filedsResultTpl.html
@@ -301,7 +301,7 @@
                             <a class="glyphicon" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[pItem.flag]" ng-click="showLayers(pItem,$event)"></a>
                             <label>{{pItem.name}} <span>{{pItem.total}}</span></label>
                         </div>
-                        <ul ng-repeat="aItem in allSubItems">
+                        <ul ng-repeat="aItem in allSubItems" class="text-ellipsis">
                             <li ng-if="aItem.i!=''||aItem.i!=null||aItem.i!=' '"
                                 ng-click="showTab(aItem,$event,pItem.id,$index)" ng-class="{true:'selected'}[allStyleArr[$index]]">
                                 <i class="glyphicon glyphicon-copyright-mark"> </i> <label data-toggle="tooltip"  title="{{aItem.m.f|date:'yyyy-MM-dd HH:mm:ss'}}">{{(!aItem.m.e)?'未命名':aItem.m.e}}</label>
@@ -329,7 +329,7 @@
                             <a class="glyphicon" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[pendItem.flag]" ng-click="showLayers(pendItem,$event)"></a>
                             <label>{{pendItem.name}} <span>{{pendItem.total}}</span></label>
                         </div>
-                        <ul ng-repeat="pendSubItem in pendSubItems">
+                        <ul ng-repeat="pendSubItem in pendSubItems" class="text-ellipsis">
                             <li ng-if="pendSubItem.i!=''||pendSubItem.i!=null||pendSubItem.i!=' '"
                                 ng-click="showTab(pendSubItem,$event,pendItem.id,$index)" ng-class="{true:'selected'}[pendingStyleArr[$index]]">
                                 <label>{{(!pendSubItem.m.e)?'未命名': (pendSubItem.m.e|date:'yyyy-MM-dd HH:mm:ss')}}</label>
@@ -355,7 +355,7 @@
                             <a class="glyphicon" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[solveItem.flag]" ng-click="showLayers(solveItem,$event)"></a>
                             <label>{{solveItem.name}}  <span>{{solveItem.total}}</span></label>
                         </div>
-                        <ul ng-repeat="solveSubItem in solvedSubItems">
+                        <ul ng-repeat="solveSubItem in solvedSubItems" class="text-ellipsis">
                             <li ng-if="solveSubItem.i!=''||solveSubItem.i!=null||solveSubItem.i!=' '"
                                 ng-click="showTab(solveSubItem,$event,solveItem.id,$index)"
                                 ng-class="{true:'selected'}[solvedStyleArr[$index]]">
