车信的左右附加车道的维护

--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -63,10 +63,10 @@
                             <div>
                                 <label for="leftAddtionalLane">左</label>
                                 <input id="leftAddtionalLane" disabled class="chosen-disabled" type="text" style="width: 49px"
-                                ng-value="CurrentObject.lanes[0].adt == 1 ? '是':'否'">
+                                ng-value="CurrentObject.leftExtend">
                                 <label for="rightAddtionalLane">右</label>
                                 <input id="rightAddtionalLane" disabled class="chosen-disabled" type="text" style="width: 49px"
-                                ng-value="CurrentObject.lanes[CurrentObject.lanes.length - 1].adt == 1 ? '是':'否'">
+                                ng-value="CurrentObject.rightExtend">
                             </div>
                         </li>
                     </ul>
