poi 加油站 柴油类型切换时，卡车类型联动查询

--- a/scripts/components/poi/tpls/attr-deep/oilStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/oilStationTpl.html
@@ -53,7 +53,7 @@
                         <label>柴油</label>
                         <div class="block">
                             <label ng-repeat="(key, value) in fuelTypeML" ng-if="true">
-                                <input type="checkbox" value="{{key}}" ng-model="poi.gasstations[0].fuelType[key]" ng-disabled="isSpecialOperation"> {{value}}
+                                <input type="checkbox" value="{{key}}" ng-model="poi.gasstations[0].fuelType[key]" ng-disabled="isSpecialOperation" ng-change="getTruckInfo($event)"> {{value}}
                             </label>
                             <label ng-repeat="(key, value) in fuelTypeHM" ng-if="">
                                 <input type="checkbox" value="{{key}}" ng-model="poi.gasstations[0].fuelType[key]" ng-disabled="isSpecialOperation"> {{value}}
