优化选择tips时关联要素方法

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -57,7 +57,7 @@
 }
 
 #dataTipsOriginImg {
-    height: 100%;
+    width: 100%;
 }
 
 #loadText {
@@ -110,7 +110,7 @@
     border: 1px solid #9D9D9D;
     box-shadow: 4px 4px 8px 4px #333;
     border-radius: 4px;
-    height: 80%;
+    height: 500px;
     top: 40px;
     bottom: 0;
     left: 0;
