--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -31,7 +31,7 @@
   height: 300px;
 }
 #dataTipsOriginImg {
-  height: 100%;
+  width: 100%;
 }
 #loadText {
   width: 50%;
@@ -78,7 +78,7 @@
   border: 1px solid #9D9D9D;
   box-shadow: 4px 4px 8px 4px #333;
   border-radius: 4px;
-  height: 80%;
+  height: 500px;
   top: 40px;
   bottom: 0;
   left: 0;
