luface 字段属性值显示错乱问题修改

--- a/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
@@ -19,20 +19,20 @@
                         <li>
                             <label>FACE面积</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="luFaceData.meshId"
+                                <input type="text" class="fm-control" ng-model="luFaceData.area"
                                        disabled="disabled">
                             </div>
                         </li>
                         <li>
                             <label>FACE周长</label>
                             <div>
-                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="luFaceData.area">
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="luFaceData.perimeter">
                             </div>
                         </li>
                         <li>
                             <label>图幅号</label>
                             <div>
-                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="luFaceData.perimeter">
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="luFaceData.meshId">
                             </div>
                         </li>
                     </ul>
