--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -47,7 +47,10 @@
 }
 
 #imgContainer {
-    height:100%;
+    height:400px;
+    width:100%;
+    vertical-align: middle;
+    display: table-cell;
     text-align: center;
 }
 
@@ -58,6 +61,7 @@
 
 #dataTipsOriginImg {
     width: 100%;
+    display: block;
 }
 
 #loadText {
@@ -110,7 +114,7 @@
     border: 1px solid #9D9D9D;
     box-shadow: 4px 4px 8px 4px #333;
     border-radius: 4px;
-    height: 500px;
+    height: 510px;
     top: 40px;
     bottom: 0;
     left: 0;
