--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -23,7 +23,10 @@
   text-align: left;
 }
 #imgContainer {
-  height: 100%;
+  height: 400px;
+  width: 100%;
+  vertical-align: middle;
+  display: table-cell;
   text-align: center;
 }
 #imgContainer1 {
@@ -32,6 +35,7 @@
 }
 #dataTipsOriginImg {
   width: 100%;
+  display: block;
 }
 #loadText {
   width: 50%;
@@ -78,7 +82,7 @@
   border: 1px solid #9D9D9D;
   box-shadow: 4px 4px 8px 4px #333;
   border-radius: 4px;
-  height: 500px;
+  height: 510px;
   top: 40px;
   bottom: 0;
   left: 0;
