实景图号显示位置

--- a/scripts/components/road/tpls/attr_branch_Tpl/realImageOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/realImageOfBranch.html
@@ -7,7 +7,7 @@
     <div class="picMapShow">
         <img class="picMapImg" ng-src="{{arrowCodeSrc}}" alt="无此模式图">
         <img class="picModalImg" ng-src="{{arrowMapShow}}">
-        <div class="picMapDesc" ng-bind="diverObj.realimages[0].realCode"></div>
+        <div class="picMapDesc" ng-bind="diverObj.realimages[0].realCode" style="margin-top: 10px;"></div>
     </div>
     <form name="nameBranchForm">
     <!--begin 模式图信息-->
