车道连通功能修改：梳理了之前的代码，优化了部分不合理的地方

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -133,6 +133,7 @@
                         <button class="fm-top-btn blank" title="制作警示信息" ng-controller="addRdRelationCtrl" ng-click="addShape('RD_WARNINGINFO')">警</button>
                         <button class="fm-top-btn blank" title="制作可变限速" ng-controller="addRdRelationCtrl" ng-click="addShape('VARIABLESPEED')">变</button>
                         <button class="fm-top-btn blank" title="制作详细车道" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANE')">详</button>
+                        <button class="fm-top-btn blank" title="制作车道连通" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANETOPO')">连</button>
                         <button class="fm-top-btn blank" title="制作语音引导" ng-controller="addRdRelationCtrl" ng-click="addShape('RDVOICEGUIDE')">语</button>
                     </div>
                 </div>
