卡车字段增加修改高亮

--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -57,7 +57,7 @@
                       <label>卡 车</label>
                       <div class="block">
                             <label ng-repeat="(key, value) in truckTypeOpt">
-                                <input type="radio" value={{key}} name="truckType" ng-model="poi.truckFlag" ng-class="{true:'chosen-disabled'}[truckFlagDisable]" ng-disabled="truckFlagDisable"> {{value}}
+                                <input fm-edit-view type="radio" value={{key}} name="truckType" ng-model="poi.truckFlag" ng-class="{true:'chosen-disabled'}[truckFlagDisable]" ng-disabled="truckFlagDisable"> {{value}}
                             </label>
                       </div>
                   </li>
