--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -297,8 +297,8 @@
                           <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="lane.time">
                               <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                               <div class="col-sm-7" style="padding: 4px">
-                                  <div ng-repeat="item in lane.time.split(';')" class="text-ellipsis">
-                                      <span class="label" title="{{item}}">{{item}}</span>
+                                  <div ng-repeat="item in lane.time.split(';')">
+                                      <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
                                   </div>
                               </div>
                           </div>
@@ -382,7 +382,7 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.o_array && dataTipsData.o_array[0].hasOwnProperty('time')">
                             <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;段:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label" ng-bind="dataTipsData.o_array[0].time"></span>
+                                <span class="label" ng-bind="dataTipsData.o_array[0].time" style="white-space: normal;"></span>
                             </div>
                         </div>
                         <!-- 类型 -->
@@ -429,7 +429,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="wArrayitem.hasOwnProperty('time')">
                             <label class="col-sm-5 control-label" style="padding: 4px">通行时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label " >{{wArrayitem.time}}</span>
+                                <span class="label "  style="white-space: normal;">{{wArrayitem.time}}</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="wArrayitem.hasOwnProperty('desc')">
@@ -515,8 +515,8 @@
                             <label class="col-sm-5 control-label" style="padding: 4px" ng-if="!dataTipsData.isNoCrossing && !dataTipsData.isReversibleLine">时&nbsp;&nbsp;间&nbsp;&nbsp;段:</label>
                             <label class="col-sm-5 control-label" style="padding: 4px" ng-if="dataTipsData.isNoCrossing || dataTipsData.isReversibleLine">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <div ng-repeat="item in timeDomain" class="text-ellipsis">
-                                    <span class="label" title="{{item}}">{{item}}</span>
+                                <div ng-repeat="item in timeDomain">
+                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
@@ -626,7 +626,7 @@
                             <label class="col-sm-5 control-label" style="padding: 4px">通行时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="date in timeDomain">
-                                	<span ng-bind="date"></span>
+                                	<span ng-bind="date" style="white-space: normal;"></span>
                                 </div>
                             </div>
                         </div>
@@ -649,7 +649,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('d_array') && dataTipsData.isConditionLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp; 间&nbsp; 段:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <div ng-repeat="item in dataTipsData.d_array" class="label text-left" style="float: inherit;" ng-bind="item.time">
+                                <div ng-repeat="item in dataTipsData.d_array" class="label text-left" style="float: inherit;white-space: normal;" ng-bind="item.time">
                                 </div>
                             </div>
                         </div>
@@ -838,8 +838,8 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.c_array[0].hasOwnProperty('out')">
                             <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <div ng-repeat="item in timeDomain" class="text-ellipsis">
-                                    <span class="label" title="{{item}}">{{item}}</span>
+                                <div ng-repeat="item in timeDomain">
+                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
@@ -904,8 +904,8 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="oArrayItem.c_array[0].hasOwnProperty('time')">
                             <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <div ng-repeat="item in oArrayItem.c_array[0].time.split(';')" class="text-ellipsis">
-                                    <span class="label" title="{{item}}">{{item}}</span>
+                                <div ng-repeat="item in oArrayItem.c_array[0].time.split(';')">
+                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
