收费站Tips类型过长显示问题

--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -442,8 +442,8 @@
                         <!--begin 收费站-->
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="tollGateTp">
                             <label class="col-sm-5 control-label" style="padding: 4px">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型:</label>
-                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
-                                <span class="label">{{tollGateTp}}</span>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label" style="white-space: normal;">{{tollGateTp}}</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.pNum">
