1.解决切换poi后，默认显示基础信息tab页签； 2.增加显示poi与关联link的位置关系；

--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -94,7 +94,8 @@
                   <li>
                       <label >关联LINK</label>
                       <div>
-                          <span ng-bind="poi.linkPid"></span>
+                          <span ng-bind="poi.linkPid"></span>&nbsp;&nbsp;
+                          <span>{{{0:'不应用',1:'左侧',2:'右侧',3:'线上'}[poi.side]}}</span>
                       </div>
                   </li>
                   <li>
