--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -298,7 +298,7 @@
                               <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                               <div class="col-sm-7" style="padding: 4px">
                                   <div ng-repeat="item in lane.time.split(';')">
-                                      <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
+                                      <span class="label" title="{{item}}" style="white-space: normal;word-wrap: break-word;">{{item}}</span>
                                   </div>
                               </div>
                           </div>
@@ -382,7 +382,9 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.o_array && dataTipsData.o_array[0].hasOwnProperty('time')">
                             <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;段:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label" ng-bind="dataTipsData.o_array[0].time" style="white-space: normal;"></span>
+                                <div ng-repeat="item in dataTipsData.o_array[0].time.split(';')">
+                                    <span class="label" ng-bind="item" style="white-space: normal;word-wrap: break-word;"></span>
+                                </div>
                             </div>
                         </div>
                         <!-- 类型 -->
@@ -429,7 +431,9 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="wArrayitem.hasOwnProperty('time')">
                             <label class="col-sm-5 control-label" style="padding: 4px">通行时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label "  style="white-space: normal;">{{wArrayitem.time}}</span>
+                                <div ng-repeat="item in wArrayitem.time.split(';')">
+                                    <span class="label" ng-bind="item" style="white-space: normal;word-wrap: break-word;"></span>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="wArrayitem.hasOwnProperty('desc')">
@@ -443,7 +447,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="tollGateTp">
                             <label class="col-sm-5 control-label" style="padding: 4px">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label" style="white-space: normal;">{{tollGateTp}}</span>
+                                <span class="label" style="white-space: normal;word-wrap: break-word;">{{tollGateTp}}</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.pNum">
@@ -516,7 +520,7 @@
                             <label class="col-sm-5 control-label" style="padding: 4px" ng-if="dataTipsData.isNoCrossing || dataTipsData.isReversibleLine">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="item in timeDomain">
-                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
+                                    <span class="label" title="{{item}}" style="white-space: normal;word-wrap: break-word;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
@@ -626,7 +630,7 @@
                             <label class="col-sm-5 control-label" style="padding: 4px">通行时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="date in timeDomain">
-                                	<span ng-bind="date" style="white-space: normal;"></span>
+                                	<span ng-bind="date" style="white-space: normal;word-wrap: break-word;"></span>
                                 </div>
                             </div>
                         </div>
@@ -649,7 +653,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('d_array') && dataTipsData.isConditionLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp; 间&nbsp; 段:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <div ng-repeat="item in dataTipsData.d_array" class="label text-left" style="float: inherit;white-space: normal;" ng-bind="item.time">
+                                <div ng-repeat="item in dataTipsData.d_array" class="label text-left" style="float: inherit;white-space: normal;word-wrap: break-word;" ng-bind="item.time">
                                 </div>
                             </div>
                         </div>
@@ -839,7 +843,7 @@
                             <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="item in timeDomain">
-                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
+                                    <span class="label" title="{{item}}" style="white-space: normal;word-wrap: break-word;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
@@ -905,7 +909,7 @@
                             <label class="col-sm-5 control-label" style="padding: 4px">限制时间:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <div ng-repeat="item in oArrayItem.c_array[0].time.split(';')">
-                                    <span class="label" title="{{item}}" style="white-space: normal;">{{item}}</span>
+                                    <span class="label" title="{{item}}" style="white-space: normal;word-wrap: break-word;">{{item}}</span>
                                 </div>
                             </div>
                         </div>
