--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -558,8 +558,8 @@
                         <!--begin 挂接-->
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('pcd')">
                             <label class="col-sm-5 control-label" style="padding: 4px">图&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;片:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <img ng-src="{{pcd}}">
+                            <div class="col-sm-7" style="padding: 10px;">
+                                <img ng-src="{{pcd}}" style="background-color: #fff;">
                             </div>
                         </div>
                         <!--end 挂接-->
