tips照片增加新窗口打开功能

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -193,10 +193,12 @@
     }
 }
 
-#fullPicBtn {
-    position: absolute;
-    right: 40px;
-    top: 16px;
+.fullPicBtn {
+    position: relative;
+    //right: 40px;
+    //top: 16px;
+    margin:0 5px;
+    top:2px;
     color: #ccc;
     transition: all 0.3s;
     cursor: pointer;
