--- a/scripts/components/road/tpls/attr_tips_tpl/tipsPictureTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/tipsPictureTpl.html
@@ -1,13 +1,16 @@
 <div ng-controller="tipsPictureController">
     <div class="modal-header">
-        <div class="pull-right" id="fullPicBtn" ng-click="showFullPic();" title="全屏">
-            <span class="glyphicon glyphicon-fullscreen"></span>
-        </div>
         <button id="tipsImgClose" type="button" class="close"
                 ng-click="closePicContainer()"
                 data-dismiss="modal" aria-hidden="true" title="关闭">
             &times;
         </button>
+        <div class="pull-right fullPicBtn" ng-click="showNewWindow(tipsPhoto);" title="新窗口查看">
+            <span class="glyphicon glyphicon-new-window"></span>
+        </div>
+        <div class="pull-right fullPicBtn" ng-click="showFullPic();" title="全屏">
+            <span class="glyphicon glyphicon-fullscreen"></span>
+        </div>
         <h4 class="modal-title" id="myModalLabel">
             图片
         </h4>
